# TurboPI

./: Cargo.toml  README.md
benches/: benchmark_digits.rs  benchmark_multiply.rs  benchmark_pi.rs  benchmark_prime_no.rs
src/: digit_bench.rs  factorial.rs  main.rs  multiply.rs  pi_computer.rs
